# synapse

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/synapse-channels/: Cargo.toml
crates/synapse-channels/src/: lib.rs  manager.rs  registry.rs
crates/synapse-channels/src/connectors/: mod.rs
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: main.rs
crates/synapse-cli/src/commands/: apply.rs  check.rs  clear.rs  destroy.rs  emit.rs  init.rs  inspect.rs  logs.rs  mod.rs  plan.rs  query.rs  reload.rs  status.rs
crates/synapse-client/: Cargo.toml
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: ast.rs  errors.rs  lexer.rs  parser.rs  typeck.rs  types.rs
crates/synapse-core/tests/: test_lexer.rs
crates/synapse-dsl/: Cargo.toml
crates/synapse-dsl/src/: ast.rs  lexer.rs  lib.rs  parser.rs  typeck.rs
crates/synapse-dsl/tests/: test_lexer.rs
crates/synapse-memory/src/: lib.rs
crates/synapse-python/: Cargo.toml  pyproject.toml
crates/synapse-python/src/: lib.rs
crates/synapse-runtime/: Cargo.toml
crates/synapse-runtime/src/: channels.rs  config.rs  docker.rs  lib.rs  llm.rs  server.rs  value.rs
crates/synapse-runtime/src/interpreter/: handler.rs  mod.rs  policy.rs  query.rs  update.rs
crates/synapse-runtime/src/storage/: arangodb.rs  chromadb.rs  memgraph.rs  mod.rs  neo4j.rs  pinecone.rs  qdrant.rs  sqlite.rs  surrealdb.rs  weaviate.rs
crates/synapse-sdk/: Cargo.toml
crates/synapse-sdk/src/: lib.rs
data/: hello.db-shm  hello.db-wal
docs/: mdx-components.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  theme.config.tsx  tsconfig.json
docs/app/: globals.css  layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/app/[[...slug]]/: page.tsx
docs/components/: code-block.tsx  docs-layout.tsx  github-header-link.tsx  mdx-components.tsx  search.tsx  toc.tsx
docs/content/: _meta.json  getting-started.mdx  index.mdx
docs/content/examples/: _meta.json  agent-facts.mdx  channels.mdx  letta.mdx  supermemory.mdx  zep.mdx
docs/content/language/: _meta.json  config.mdx  expressions.mdx  extern-functions.mdx  queries.mdx  types.mdx  updates.mdx
docs/content/reference/: connectors.mdx
docs/content/tutorials/: _meta.json  channel-ingestion.mdx  conversation-memory.mdx  knowledge-graph.mdx
docs/grammar/: mnm.tmLanguage.json
docs/lib/: mdx.ts  navigation.ts  site.ts
docs/pages/: index.mdx
docs/pages/examples/: conversation.mdx  hello.mdx  multi-backend.mdx  user-profile.mdx
docs/pages/language/: channels.mdx  config.mdx  handlers.mdx  memory.mdx  overview.mdx  policies.mdx
docs/pages/reference/: _meta.json  backends.mdx  builtins.mdx  cli.mdx  http-api.mdx  sdks.mdx
docs/pages/tutorials/: fact-memory.mdx  hello-world.mdx  multi-backend.mdx
docs/public/: search-index.json
docs/scripts/: build-search-index.mjs
examples/: agent_facts.mnm  channels.mnm  conversation.mnm  hello.mnm  letta.mnm  multi_backend.mnm  supermemory.mnm  user_profile.mnm  zep.mnm
extensions/synapse-vscode/: README.md  package.json  synapse-mnm-0.1.0.vsix
extensions/synapse-vscode/syntaxes/: mnm.tmLanguage.json
