[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-core = { path = "../synapse-core" }
synapse-runtime = { path = "../synapse-runtime" }
synapse-sdk = { path = "../synapse-sdk" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
