[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Synapse - Configuration Language for Memory Systems"
license = "MIT"
repository = "https://github.com/krypticmouse/synapse"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-dsl = { path = "../synapse-dsl" }
synapse-runtime = { path = "../synapse-runtime" }
synapse-sdk = { path = "../synapse-sdk" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
toml = "0.8"
