[package]
name = "synapse-dsl"
version = "0.1.0"
edition = "2021"
description = "DSL parser for Synapse memory configuration language (.mnm)"
license = "MIT"
repository = "https://github.com/krypticmouse/synapse"

[dependencies]
logos = "0.16"
chumsky = "0.10"
ariadne = "0.5"
thiserror = { workspace = true }
serde = { workspace = true }
