[package]
name = "synapse-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for Synapse memory runtime"
license = "MIT"
repository = "https://github.com/krypticmouse/synapse"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
